force-app/main/default/objects/Project_Task__c/fields/Actual_Finish__c.field-meta.xml
<CustomField>
    <fullName>Actual_Finish__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Finish</label>
    <type>Date</type>
</CustomField>