force-app/main/default/objects/Project_Task__c/fields/Actual_Finish_Form__c.field-meta.xml
<CustomField>
    <fullName>Actual_Finish_Form__c</fullName>
    <formula>Actual_Finish__c - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Finish Form</label>
    <type>Date</type>
</CustomField>