force-app/main/default/objects/Project_Task__c/fields/Checked__c.field-meta.xml
<CustomField>
    <fullName>Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External</label>
    <type>Checkbox</type>
</CustomField>