force-app/main/default/objects/Project_Task__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date forfunctionality</label>
    <type>Date</type>
</CustomField>