force-app/main/default/objects/Project_Task__c/fields/End_Date_Form__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Form__c</fullName>
    <formula>IF(Project_Type__c  = &apos;milestone&apos;, End_Date__c, End_Date__c -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Finish</label>
    <type>Date</type>
</CustomField>