force-app/main/default/objects/Project_Task__c/fields/lag__c.field-meta.xml
<CustomField>
    <fullName>lag__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>lag</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>