force-app/main/default/objects/Project_Task__c/fields/linkId__c.field-meta.xml
<CustomField>
    <fullName>linkId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>linkId</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>