force-app/main/default/objects/Project_Task__c/fields/Links__c.field-meta.xml
<CustomField>
    <fullName>Links__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Links</label>
    <type>Url</type>
</CustomField>