force-app/main/default/objects/Project_Task__c/fields/Mark_as_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Mark_as_Milestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark as Milestone</label>
    <type>Checkbox</type>
</CustomField>