force-app/main/default/objects/Project_Task__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Task Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>