force-app/main/default/objects/Project_Task__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>