force-app/main/default/objects/Project_Task__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <label>ParentId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>