force-app/main/default/objects/Project_Task__c/fields/predecessors__c.field-meta.xml
<CustomField>
    <fullName>predecessors__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Predecessors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>