force-app/main/default/objects/Project_Task__c/fields/priority__c.field-meta.xml
<CustomField>
    <fullName>priority__c</fullName>
    <label>zz_Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>