force-app/main/default/objects/Project_Task__c/fields/Project_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Task_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Task Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>