force-app/main/default/objects/Project_Task__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Task Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>