force-app/main/default/objects/Project_Task__c/fields/PRT_Name__c.field-meta.xml
<CustomField>
    <fullName>PRT_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project/Template Name</label>
    <referenceTo>Project_Template__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>