force-app/main/default/objects/Project_Task__c/fields/Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>Resource_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resource Id</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>