force-app/main/default/objects/Project_Task__c/fields/Row_Number__c.field-meta.xml
<CustomField>
    <fullName>Row_Number__c</fullName>
    <label>Row #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>