force-app/main/default/objects/Project_Task__c/fields/source__c.field-meta.xml
<CustomField>
    <fullName>source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>source</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>