force-app/main/default/objects/Project_Task__c/fields/Source_Link_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Link_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Link Id</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>