force-app/main/default/objects/Project_Task__c/fields/target__c.field-meta.xml
<CustomField>
    <fullName>target__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>target</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>