force-app/main/default/objects/Project_Task__c/fields/Target_Link_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Link_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Target Link Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>