force-app/main/default/objects/Project_Task__c/fields/Test_Fld__c.field-meta.xml
<CustomField>
    <fullName>Test_Fld__c</fullName>
    <label>Test Fld</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>