force-app/main/default/objects/Project_Task__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>type</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>