force-app/main/default/objects/Project_Task__c/fields/WBS_Code__c.field-meta.xml
<CustomField>
    <fullName>WBS_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WBS</label>
    <length>250</length>
    <type>Text</type>
</CustomField>