force-app/main/default/objects/Project_Task__c/fields/Work_Duration__c.field-meta.xml
<CustomField>
    <fullName>Work_Duration__c</fullName>
    <label>Work Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>